--- a/Curso_de_HTML_e_CSS_classes_posicionamento_e_flexbox/portifolio/stylesheet.css
+++ b/Curso_de_HTML_e_CSS_classes_posicionamento_e_flexbox/portifolio/stylesheet.css
@@ -1,8 +1,19 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body{
     background-color: #000000;
     color: #F6F6F6;
 }
 
-strong{
+.titulo-destaque {
     color: #22D4FD;
+}
+
+p {
+    margin: 10px;
+    border: 2px solid black;
+    padding: 5px;
 }
