--- a/Curso_de_HTML_e_CSS_classes_posicionamento_e_flexbox/portifolio/stylesheet.css
+++ b/Curso_de_HTML_e_CSS_classes_posicionamento_e_flexbox/portifolio/stylesheet.css
@@ -1,45 +1,37 @@
-@import url('https://fonts.googleapis.com/css2?family=Krona+One&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat&display=swap');
 
 *{
     margin: 0;
     padding: 0;
 }
 
-body {
+body{
     height: 100vh;
     box-sizing: border-box;
     background-color: #000000;
     color: #F6F6F6;
 }
 
-.titulo-destaque {
+.titulo-destaque{
     color: #22D4FD;
 }
 
-.apresentacao {
-    margin: 1 0%;    
+.apresentacao{
+    margin: 10%;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
-
-.apresentacao__conteudo {
+.apresentacao__conteudo{
     width: 615px;
 }
 
-.apresentacao__conteudo__titulo {
+.apresentacao__conteudo__titulo{
     font-size: 36px;
-    font-family: "Krona One", serif;
+    font-family: 'Krona One', sans-serif;
 }
 
-.apresentacao__conteudo__paragrafo {
+.apresentacao__conteudo__texto{
     font-size: 24px;
-    font-family: "Montserrat", serif;
-    font-weight: 400;
-}
-
-.apresentacao__links {
-    display: flex;
-    justify-content: space-between;
+    font-family: 'Montserrat', sans-serif;
 }
