--- a/Curso_de_HTML_e_CSS_cabecalho_footer_e_variaveis_CSS/portifolio/styles/stylesheet.css
+++ b/Curso_de_HTML_e_CSS_cabecalho_footer_e_variaveis_CSS/portifolio/styles/stylesheet.css
@@ -1,7 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Krona+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
-
+:root {
+    --primary-color: #FFF2F2;
+    --secondary-color: #007bff;
+    --tertiary-color: #2D336B;
+    --quaternary-colorhover: #A9B5DF;
+    --quinternary-colorhover: #007bff;
+    --primary-fonts: 'Krona One', sans-serif;
+    --secondary-fonts: 'Montserrat', sans-serif;
+}
 
 *{
     margin: 0;
@@ -11,8 +19,8 @@
 body{
     /* height: 100vh; */
     box-sizing: border-box;
-    background-color: #000000;
-    color: #F6F6F6;
+    background-color: var(--primary-color);
+    color: var(--secondary-color);
 }
 
 .cabecalho{
@@ -25,18 +33,19 @@ body{
 }
 
 .cabecalho__menu__link{
-    font-family: 'Montserrat', sans-serif;
+    font-family: var(--secondary-fonts);
     font-size: 24px;
     font-weight: 600;
-    color: #22D4FD;
+    color: var(--tertiary-color);
+    text-decoration: none;
 }
 
 .cabecalho__menu__link:hover{
-    color: #007bff;
+    color: var(--quinternary-colorhover);
 }
 
 .titulo-destaque{
-    color: #22D4FD;
+    color: var(--tertiary-color);
 }
 
 .apresentacao{
@@ -52,14 +61,19 @@ body{
     gap: 40px;
 }
 
+.apresentacao__conteudo__texto a{
+    text-decoration: none;
+    color: var(--tertiary-color);
+}
+
 .apresentacao__conteudo__titulo{
     font-size: 36px;
-    font-family: 'Krona One', sans-serif;
+    font-family: var(--primary-fonts);
 }
 
 .apresentacao__conteudo__texto{
     font-size: 24px;
-    font-family: 'Montserrat', sans-serif;
+    font-family: var(--secondary-fonts);
     font-weight: 400;
 }
 
@@ -72,7 +86,7 @@ body{
 }
 
 .apresentacao__links__subtitulo{
-    font-family: 'Krona One', sans-serif;
+    font-family: var(--primary-fonts);
     font-weight: 400;
     font-size: 24px;
 }
@@ -81,29 +95,29 @@ body{
     display: flex;
     justify-content: center;
     gap: 16px;
-    border: 2px solid #22D4FD; 
+    border: 2px solid var(--tertiary-color); 
     width: 378px;
     text-align: center;
     border-radius: 8px;
     font-size: 24px;
     padding: 21.5px 0;
     text-decoration: none;
-    color: #F6F6F6;
-    font-family: 'Montserrat', sans-serif;
+    color: var(--secondary-color);
+    font-family: var(--secondary-fonts);
     font-weight: 600;
 }
 
 .apresentacao__links__link:hover{
-    background-color: #272727;
+    background-color: var(--quaternary-colorhover);
     cursor: pointer;
 }
 
 .rodape{
-    color: #000000;
-    background-color: #22D4FD;
+    color: var(--primary-color);
+    background-color: var(--tertiary-color);
     padding: 24px;
     text-align: center;
-    font-family: 'Montserrat', sans-serif;
+    font-family: var(--secondary-fonts);
     font-size: 24px;
     font-weight: 400;
 }
